# rust-open-rpc-macros

./: Cargo.toml  README.md
open-rpc-derive/: Cargo.toml
open-rpc-derive/src/: attr.rs  lib.rs  rpc_trait.rs  to_gen_schema.rs
open-rpc-schema/: Cargo.toml
openrpc-derive/: Cargo.toml
openrpc-derive/src/: lib.rs  rpc_trait.rs  to_gen_schema.rs
openrpc-schema/: Cargo.toml
