[package]
name = "open-rpc-derive"
version = "0.0.1"
authors = ["me@austbot.com","fikgol <hit.cs.lijun@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
proc-macro2 = {version = "1.0.49"}
syn = {version = "1.0.107", features = ["full", "fold"]}
quote = "1.0.23"
openrpc-schema = {version="0.0.1", path = "../openrpc-schema"}

[lib]
proc-macro = true

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"